--- a/views/registrame.html
+++ b/views/registrame.html
@@ -53,86 +53,81 @@
           </form>-->
     </div>
   </nav>
+
   <div class="container">
     <div class="row">
       <div class="col-6 offset-3">
-        <fieldset>git
-            <legend>Formulario de registro</legend>
-            <form action="" method="POST">
+        <fieldset>
+          <legend>Formulario de registro</legend>
+          <form action="" method="POST">
 
-                <div class="form-group">
-                    <label for="nombre">Nombre:</label>
-                    <input class="form-control" type="text" name="nombre" id="nombre">
-                </div>
-                <div class="form-group">
-                    <label for="primerApellido">Primer apellido:</label>
-                    <input class="form-control" type="text" name="primerApellido" id="primerApellido">
-                </div>
-                <div class="form-group">
-                    <label for="segundoApellido">Segundo apellido:</label>
-                    <input class="form-control" type="text" name="segundoApellido" id="segundoApellido">
-                </div>
-                <div class="form-group">
-                    <label for="#">Tipo de modalidad</label>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="presencial" value="Presencial" name="modalidad">
-                        <label for="presencial">Presencial:</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="remoto" value="Remoto" name="modalidad">
-                        <label for="remoto">Remoto:</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="mixto" value="Mixtp" name="modalidad">
-                        <label for="mixto">Mixto:</label>
-                    </div>
-                    <div class="form-group">
-                        <div class="form-check">
-                            <input type="radio" name="sexo" id="hombre" value="hombre">
-                            <label for="hombre">Hombre</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="sexo" id="mujer" value="mujer">
-                            <label class="form" for="mujer">Mujer</label>
-                        </div>
-                    </div>  
-                </div>
+            <div class="form-group">
+              <label for="nombre">Nombre:</label>
+              <input class="form-control" type="text" name="nombre" id="nombre">
+            </div>
+            <div class="form-group">
+              <label for="primerApellido">Primer apellido:</label>
+              <input class="form-control" type="text" name="primerApellido" id="primerApellido">
+            </div>
+            <div class="form-group">
+              <label for="segundoApellido">Segundo apellido:</label>
+              <input class="form-control" type="text" name="segundoApellido" id="segundoApellido">
+            </div>
 
-                <ul>
-                    <li>
-                        
-                    </li>
-                    <li>
-                        
+            <div class="form-group">
+              <label for="#">Tipo de modalidad</label>
 
-                    
-                    </li>
-                    <li>
-                        <label for="curso">Curso: </label>
-                        <select name="curso" id="curso">
-                            <option value="0">Seleccione...</option>
-                            <option value="1">Creatividad y Diseño</option>
-                            <option value="2">Database system</option>
-                            <option value="3">Aplicaciones móviles con Android</option>
-                            <option value="4">Finanzas corporativas</option>
-                        </select>
-                    </li>
-                    <li>
-                        <label for="observaciones">Observaciones:</label>
-                        <br> //resize: none;
-                        <textarea name="observaciones" id="observaciones" cols="30" rows="10">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eius ex, perspiciatis a quasi ducimus dolores quia omnis, minima sequi enim? Quas magnam sed, veniam incidunt quod consequatur temporibus inventore.
-                        </textarea>
-                    </li>
-                    <li>
-                        <input type="submit" value="Registrar" name="registrar"
-                        id="registrar">
-                        <input type="reset" value="Cancelar" name="reset" id= "reset">
-                    </li>
-                </ul>
-            </form>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="presencial" value="Presencial" name="modalidad">
+                <label class="form-check-label" for="presencial">Presencial:</label>
+              </div>
+
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="remoto" value="Remoto" name="modalidad">
+                <label class="form-check-label" for="remoto">Remoto:</label>
+              </div>
+
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="mixto" value="Mixtp" name="modalidad">
+                <label class="form-check-label" for="mixto">Mixto:</label>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="">Sexo</label>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="sexo" id="hombre" value="hombre">
+                <label class="form-check-label" for="hombre">Hombre</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="sexo" id="mujer" value="mujer">
+                <label class="form-check-label" for="mujer">Mujer</label>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="curso">Curso: </label>
+              <select class="form-control" name="curso" id="curso">
+                <option class="form-control" value="0">Seleccione...</option>
+                <option class="form-control" value="1">Creatividad y Diseño</option>
+                <option class="form-control" value="2">Database system</option>
+                <option class="form-control" value="3">Aplicaciones móviles con Android</option>
+                <option class="form-control" value="4">Finanzas corporativas</option>
+              </select>
+            </div>
+
+            <div class="form-group">
+              <label for="observaciones">Observaciones:</label>
+              <br> 
+              <textarea class="form-control" style="resize: none;" name="observaciones" id="observaciones" cols="30" rows="10">Escribe aquí</textarea>
+            </div>
+            <div class="form-group">
+              <input class="btn btn-success" type="submit" value="Registrar" name="registrar" id="registrar">
+              <input class="btn btn-danger" type="reset" value="Cancelar" name="reset" id="reset">
+            </div>
+          </form>
         </fieldset>
-    </div>
+      </div>
     </div>
   </div>
   <!-- Optional JavaScript; choose one of the two! -->
